; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_ad_disable.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_do_ad_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.advert = type { i32 }

@verbosity = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"warning: disabling undefined ad %d\0A\00", align 1
@ADF_ON = common dso_local global i32 0, align 4
@LEV_TARG_AD_OFF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_ad_disable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.advert*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.advert* @get_ad_f(i32 %5, i32 0)
  store %struct.advert* %6, %struct.advert** %4, align 8
  %7 = load %struct.advert*, %struct.advert** %4, align 8
  %8 = icmp ne %struct.advert* %7, null
  br i1 %8, label %20, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* @verbosity, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %9
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @ad_is_ancient(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %20, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* @stderr, align 4
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @fprintf(i32 %17, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %16, %12, %9, %1
  %21 = load %struct.advert*, %struct.advert** %4, align 8
  %22 = icmp ne %struct.advert* %21, null
  br i1 %22, label %23, label %36

23:                                               ; preds = %20
  %24 = load %struct.advert*, %struct.advert** %4, align 8
  %25 = getelementptr inbounds %struct.advert, %struct.advert* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @ADF_ON, align 4
  %28 = and i32 %26, %27
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %36

30:                                               ; preds = %23
  %31 = load i32, i32* @LEV_TARG_AD_OFF, align 4
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @alloc_log_event(i32 %31, i32 8, i32 %32)
  %34 = load %struct.advert*, %struct.advert** %4, align 8
  %35 = call i32 @ad_disable(%struct.advert* %34)
  store i32 1, i32* %2, align 4
  br label %37

36:                                               ; preds = %23, %20
  store i32 0, i32* %2, align 4
  br label %37

37:                                               ; preds = %36, %30
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local %struct.advert* @get_ad_f(i32, i32) #1

declare dso_local i32 @ad_is_ancient(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1

declare dso_local i32 @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @ad_disable(%struct.advert*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
